fixing overlapping dollar sign

--- a/css/index.styl
+++ b/css/index.styl
@@ -284,7 +284,7 @@ h3,a
 /*currency sign styles*/
 .currency-sign
     position : absolute;
-    left : 20px;
+    left : 0;
 
 
 .label-tooltip {
